fixed home page vertical alignment from a fixed position from top to 50%

--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -51,8 +51,8 @@
         &--left {
 			@include flexCenterCenter($flex-direction: column, $align-items: flex-start);
 			position: absolute;
-			// left: 45rem;
-            top: 35rem;
+            top: 50%;
+            // top: 35rem;
         }
 
         &--right {
@@ -62,7 +62,9 @@
             position: absolute;
             left: 65%;
             left: 50vw;
-			top: 28.5rem;
+			// top: 28.5rem;
+			top: 50%;
+			transform: translateY(-6rem) scale(3);
 			
 			@media (max-width: 950px) {
 				left: 55vw;
